--- a/resources/css/common/maplayout.css
+++ b/resources/css/common/maplayout.css
@@ -12,9 +12,6 @@
   --bg-panel-secondary: #1E4F7A;
   --bg-panel-alert: #17294F;
   --bg-panel-success:linear-gradient(to top, #23407E, #1C2F56);
-  --dot-primary: #0089AD;
-  --dot-secondary: #B1C338;
-  --dot-alert: #87673E;
   /*패널*/
   --panel-padding: 14px;
   --panel-z-index: 9999;
@@ -151,43 +148,6 @@
   transition: all 0.3s ease;
 }
 
-/* 꺾쇠 아이콘 */
-.panel-toggle.left::before,
-.panel-toggle.right::before {
-  content: '';
-  display: inline-block;
-  width: 6px;
-  height: 6px;
-  border-top: 2px solid white;
-  border-right: 2px solid white;
-  transform: rotate(-135deg); /* default: 왼쪽 */
-  transition: transform 0.3s ease;
-}
-
-.panel-toggle.left.open::before {
-  transform: rotate(45deg); /* 열림 시: 오른쪽 */
-}
-
-.panel-toggle.right::before {
-  transform: rotate(45deg); /* default: 오른쪽 */
-}
-
-.panel-toggle.right.open::before {
-  transform: rotate(-135deg); /* 열림 시: 왼쪽 */
-}
-
-.panel-toggle.bottom {
-  top: auto;
-  bottom: var(--bottom-panel-height);
-  right: calc(var(--side-panel-width) + 15px);
-  width: 42px;
-  height: 32px;
-  border-radius: 6px 6px 0px 0px;
-}
-
-
-
-
 
 .layout-section {
   background-color: #fff;
@@ -234,6 +194,11 @@
 }
 .heademap-list > button {
 	height: 10rem;
+}
+
+.heademap-list > button.active {
+  color: var(--krds-light-color-text-secondary);
+  background: var(--krds-light-color-background-gray-subtle);
 }
 .maphome {
 	height: 5.2rem;
@@ -296,76 +261,68 @@
 }
 
 .topcontents-layout{
-	padding: .4rem 1.2rem;
+	padding: .4rem 0rem;
 	position: relative;
 }
 
-.topcontents-layout::before {
-	content: '';
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 1.2rem;
-	background: #fff;
-	width: 3.4rem;
-	height: 3.4rem;
-	border-radius: 50%;
-}
-
-.search-group::after,
-.time-group::after,
-.date-group::after,
-.result-group::after {
+.search-group::before,
+.time-group::before,
+.date-group > button::before,
+.result-group::before {
   content: '';
   position: absolute;
   top: 50%;
   left: 1.2rem;
   transform: translate(0.55rem, -50%);
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 3rem;
+  height: 3rem;
   pointer-events: none;
+  border-radius: 50%;
 }
 
-.search-group::after {
-  background: url(../../img/component/icon/ico_sch.svg) no-repeat center / contain;
+.search-group > button,
+.date-group > button,
+.time-group > button,
+.result-group > button {
+  padding: 0rem 1.6rem 0rem 5.6rem;
+  height: 100%;
 }
-.date-group::after {
-	background: url(../../img/component/icon/ico_calendar.svg) no-repeat center / contain;
+
+.search-group::before {
+  background:#fff url(../../img/component/icon/ico_sch.svg) no-repeat center / contain;
+  background-size: 2.4rem;
 }
-.time-group::after {
-	background: url(../../img/component/icon/ico_time.svg) no-repeat center / contain;
+.date-group > button::before {
+	background: #fff url(../../img/component/icon/ico_calendar.svg) no-repeat center / contain;
+  background-size: 2.4rem;
 }
-.result-group::after {
-	transform: translate(0.7rem, -50%);
-	width: 2rem;
-  height: 2rem;
-	background: url(../../img/component/icon/ico_result.svg) no-repeat center / contain;
+.time-group::before {
+	background: #fff url(../../img/component/icon/ico_time.svg) no-repeat center / contain;
+  background-size: 2.4rem;
+}
+.result-group::before {
+	background:#fff url(../../img/component/icon/ico_result.svg) no-repeat center / contain;
+  background-size: 1.6rem;
 }
 
 
 .topcontents-left,
 .topcontents-right {
  display: flex;
- align-items: center;
  align-items: stretch;
 }
 
-.topcontents-left,
-.topcontents-right {
-	align-items: stretch;
-}
+
+
 
 .topcontents-left > div,
-.topcontents-right > div {
-	padding-left: 5.2rem;
+.todaytext {
 	display: flex;
 	align-items: center;
 }
 
-
-.topcontents-left > div {
-	display: flex;
-	align-items: center;
+.todaytext {
+  padding-right: 1.6rem;
 }
 
 .search-group,
@@ -381,21 +338,52 @@
 	background: #068668;
 }
 
-.date-group > ul,
-.time-group > ul {
+.time-group > div,
+.date-group > div  {
 	display: flex;
 	gap: 1.2rem;
-	padding: 0rem 1.2rem;
 }
 
-.date-group > ul > li,
-.time-group > ul > li {
+
+
+.date-group > div > button,
+.time-group > div > button,
+.result-group > div > button  {
 	background: #fff;
 	width: 6rem;
+  padding: .4rem;
 	color: #1a1a1a;
 	text-align: center;
 	border-radius: .8rem;
 }
+
+.date-list > button.active,
+.time-list > button.active {
+  background:#FF802B;
+  color: #fff;
+}
+
+.date-group .date-list,
+.time-group .time-list {
+  max-width: 0;              /* 처음엔 접힘 */
+  overflow: hidden;           /* 넘치는 내용 숨김 */
+  transition: max-width 0.6s ease; 
+}
+
+/* 열렸을 때 */
+.date-group.open .date-list {
+  max-width: calc(5 * 7rem + 4 * 0.4rem);
+  padding: 0rem 1.4rem;
+}
+
+.time-group.open .time-list {
+  max-width: calc(8 * 7rem + 4 * 0.4rem);
+  padding: 0rem 1.4rem;
+}
+
+
+
+
 
 
 .search {
@@ -493,7 +481,6 @@
 
 
 /* 탭 */
-
 .maptab {
 	--krds-tab--button-size-height: 4rem !important;
 	--krds-tab--full-button-size-height: 4rem !important;
@@ -723,12 +710,25 @@
 
 }
 
+.krds-check-area.layer {
+  width: 100%;
+}
+
+.krds-form-check.layer {
+  width: calc(100% / 2);
+  font-size: 1.5rem;
+}
+
 .form-group {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   gap: 8px;
   width: 100%;
+}
+
+.form-group.label.public {
+  width: calc(100% - 30rem);
 }
 
 .form-conts,
@@ -758,9 +758,6 @@
 }
 
 /*투명도 조절*/
-
-
-
 .layer-button-list {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -829,22 +826,7 @@
   border: none;
 }
 
-/* 꺾쇠 아이콘 */
-.panel-toggle::before {
-  content: '';
-  display: inline-block;
-  width: 6px;
-  height: 6px;
-  border-top: 2px solid white;
-  border-right: 2px solid white;
-  transform: rotate(135deg);
-  transition: transform 0.3s ease;
-}
 
-/* 열림 상태에서 아래 꺽쇠로 변경 */
-.panel-toggle.bottom.open::before {
-  transform: rotate(-45deg); /* 아래 꺽쇠 (열기 상태) */
-}
 
 /*지도버튼*/
 .map-btnlist {
@@ -913,6 +895,19 @@
 .map-btnbox-bottom > div >button {
 	height: 3.2rem;
 } 
+
+
+.map-btnbox-legend {
+  transform: scaleY(0); 
+  transform-origin: bottom;
+  transition: transform 0.4s ease;
+  overflow: hidden;       
+}
+
+.legend-list.open .map-btnbox-legend {
+  transform: scaleY(1);
+}
+
 
 .btn_pluss {
 	background: url(../../img/map/map_pluss.svg)center center no-repeat;
@@ -987,6 +982,35 @@
 }
 
 
+.layer-sch {
+  display: flex;
+}
+
+.maplayer-button::before {
+  content: '';
+	width: 1.4rem;
+	height: 1.4rem;
+	display: inline-block;
+	background: url(../../img/map/map.svg)center center no-repeat;
+}
+
+.trans-button {
+  width: 100%;
+}
+
+.trans-button >input {
+  width: 100%;
+}
+
+.trans-button::before {
+  content: '';
+	width: 1.4rem;
+	height: 1.4rem;
+	display: inline-block;
+	background: url(../../img/map/filter.svg)center center no-repeat;
+}
+
+
 
 /*지도 테이블*/
 .map-table-wrap {
@@ -1037,7 +1061,7 @@
   padding: 1.6rem;
 	display: flex;
   flex-direction: column;
-	font-size: 1.5rem;
+	font-size: 1.7rem;
 }
 
 .krds-form-select.map {
@@ -1112,6 +1136,55 @@
     white-space: nowrap;
   }
 }
+
+/* 패널 기본 상태 */
+#rightWrap {
+  position: absolute;
+  right: -49.6rem; /* 패널 너비만큼 숨김 */
+  top: 5.2rem;
+  width: 49.6rem;
+  height: 100%;
+  transition: right 0.5s ease;
+  z-index: 99;
+}
+
+/* 패널 열림 상태 */
+#rightWrap.open {
+  right: 0;
+}
+
+#leftWrap {
+  position: absolute;
+  left: -42.1rem; /* 숨김 */
+  top: 5.2rem;
+  width: 49.6rem;
+  height: 100%;
+  transition: left 0.5s ease;
+  z-index: 98;
+}
+
+/* 열림 상태 */
+#leftWrap.open {
+  left: 7.5rem;
+}
+
+
+/* 지도 관련 영역 이동 애니메이션 */
+.index-map,
+.map-btnlist,
+.legend-list {
+  transition: transform 0.5s ease;
+}
+
+/* 패널이 열렸을 때 왼쪽으로 이동 */
+.index-map.shifted,
+.map-btnlist.shifted,
+.legend-list.shifted {
+  transform: translateX(-50.6rem);
+}
+
+
+
 
 @keyframes blink {
   0%, 100% { opacity: 1; }
