--- a/resources/css/component/output.css
+++ b/resources/css/component/output.css
@@ -10336,7 +10336,9 @@ caption {
 }
 .form-label,
 .form-tit {
-
+ display: flex;
+ align-items: center;
+ gap: .8rem
 }
 
 .form-group .form-conts {
